01_exam/02_vpc.tf
resource "aws_vpc" "cmk_vpc" {
  cidr_block = "10.0.0.0/16"
  enable_dns_support = true
  enable_dns_hostnames = true
  tags = {
      name = "cmk-vpc"
  }
}
