01_exam/06_rtas.tf
resource "aws_route_table_association" "cmk-rtas_a" {
  subnet_id = aws_subnet.cmk_puba.id
  route_table_id = aws_route_table.cmk_rt.id
}

resource "aws_route_table_association" "cmk-rtas_c" {
  subnet_id = aws_subnet.cmk_pubc.id
  route_table_id = aws_route_table.cmk_rt.id
}
